# orca

./: .gitignore  CMakelists.txt  LICENSE  README.md  orca.h
conan/: conanfile.txt
include/: io.h  key_triple.h  orca.h  ordered_pair.h  parser.h
tests/: CMakeLists.txt
tests/data/: about.md
tests/data/expected/: C2.txt  C3.txt  C4.txt  C5.txt  Chain3.txt  Chain4.txt  Chain5.txt
tests/integration_test/: graphlet_app.cpp  graphlet_app_default_impl.cpp
tests/unit_test/: graphlets.cpp  ordered_pair_test.cpp  parser_test.cpp
